force-app/main/default/objects/DMAPP__Plan_Type__c/DMAPP__Plan_Type__c.object-meta.xml
<CustomObject>
    <label>Plan Type</label>
    <nameField>
        <label>Plan Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>