force-app/main/default/objects/DMAPP__Plan_Type__c/fields/DMAPP__AM_Custom_Tab_Three_Label__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__AM_Custom_Tab_Three_Label__c</fullName>
    <description>This is the Label which will appear in your third AM Custom Tab</description>
    <inlineHelpText>This is the Label which will appear in your third AM Custom Tab</inlineHelpText>
    <label>Tab Three Label</label>
    <length>35</length>
    <type>Text</type>
</CustomField>