force-app/main/default/objects/DMAPP__Plan_Type__c/fields/DMAPP__Disable_Completeness__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Disable_Completeness__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables ‘Completeness’. You should disable ‘Scorecard’ and ‘Completeness’ if you have disabled any of the other tabs because ‘Scorecard’ and ‘Completeness’ cover all aspects of an account plan. So when tabs are disabled they may be misleading.</description>
    <inlineHelpText>Disables ‘Completeness’. You should disable ‘Scorecard’ and ‘Completeness’ if you have disabled any of the other tabs because ‘Scorecard’ and ‘Completeness’ cover all aspects of an account plan. So when tabs are disabled they may be misleading.</inlineHelpText>
    <label>Disable Completeness</label>
    <type>Checkbox</type>
</CustomField>