force-app/main/default/objects/DMAPP__Plan_Type__c/fields/DMAPP__Order_No__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Order_No__c</fullName>
    <label>Order No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>