force-app/main/default/objects/DMAPP__Plan_Type__c/fields/DMAPP__Potential_Ops_Ratio_Green__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Potential_Ops_Ratio_Green__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Potential Opportunities Green</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>