force-app/main/default/objects/DMAPP__Plan_Type__c/fields/DMAPP__Vertical_Axis__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Vertical_Axis__c</fullName>
    <description>Specify the title of the vertical axis on the Segmentation Map</description>
    <inlineHelpText>Specify the title of the vertical axis on the Segmentation Map</inlineHelpText>
    <label>Vertical Axis</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>