force-app/main/default/objects/DMAPP__Plan_Type__c/validationRules/DMAPP__CurrentOpportunitiesValidRange.validationRule-meta.xml
<ValidationRule>
    <fullName>DMAPP__CurrentOpportunitiesValidRange</fullName>
    <active>true</active>
    <errorConditionFormula>(DMAPP__Current_Ops_Ratio_Green__c &lt; 0 || DMAPP__Current_Ops_Ratio_Green__c &gt; 50) || (DMAPP__Current_Ops_Ratio_Amber__c &lt; 0 || DMAPP__Current_Ops_Ratio_Amber__c &gt; 50) || (DMAPP__Current_Ops_Ratio_Amber__c &gt; DMAPP__Current_Ops_Ratio_Green__c)</errorConditionFormula>
    <errorMessage>Current Opportunities Green and Amber cannot be less than 0% or greater than 5000% and Current Opportunities Green cannot be less than Current Opportunities Amber</errorMessage>
</ValidationRule>