force-app/main/default/objects/DMAPP__Plan_Type__c/validationRules/DMAPP__MutualValueValidRange.validationRule-meta.xml
<ValidationRule>
    <fullName>DMAPP__MutualValueValidRange</fullName>
    <active>true</active>
    <errorConditionFormula>(DMAPP__Segmentation_Score_Green__c  &lt; 0 ||  DMAPP__Segmentation_Score_Green__c &gt; 1) ||
(DMAPP__Segmentation_Score_Amber__c &lt; 0 || DMAPP__Segmentation_Score_Amber__c &gt; 1) ||
(DMAPP__Segmentation_Score_Amber__c  &gt;  DMAPP__Segmentation_Score_Green__c)</errorConditionFormula>
    <errorMessage>Mutual Value Green and Amber cannot be less than 0% or greater than 100% and Mutual Value Green cannot be less than Mutual Value Amber</errorMessage>
</ValidationRule>