force-app/main/default/objects/DMAPP__Plan_Type__c/validationRules/DMAPP__Plan_Type_Name_Maximum_Length_is_40_char.validationRule-meta.xml
<ValidationRule>
    <fullName>DMAPP__Plan_Type_Name_Maximum_Length_is_40_char</fullName>
    <active>true</active>
    <description>Plan Type Name Maximum Length is 40 chars</description>
    <errorConditionFormula>LEN(Name) &gt; 40</errorConditionFormula>
    <errorMessage>Plan Type Name Maximum Length is 40 chars</errorMessage>
</ValidationRule>