force-app/main/default/objects/DMAPP__Plan_Type__c/validationRules/DMAPP__PotentialOpportunitiesValidRange.validationRule-meta.xml
<ValidationRule>
    <fullName>DMAPP__PotentialOpportunitiesValidRange</fullName>
    <active>true</active>
    <errorConditionFormula>(DMAPP__Potential_Ops_Ratio_Green__c &lt; 0  || DMAPP__Potential_Ops_Ratio_Green__c &gt; 50) || (DMAPP__Potential_Ops_Ratio_Amber__c &lt; 0 || DMAPP__Potential_Ops_Ratio_Amber__c &gt; 50) || (
DMAPP__Potential_Ops_Ratio_Amber__c &gt; DMAPP__Potential_Ops_Ratio_Green__c)</errorConditionFormula>
    <errorMessage>Potential Opportunities Green and Amber cannot be less than 0% or greater than 5000% and Potential Opportunities Green cannot be less than Potential Opportunities Amber</errorMessage>
</ValidationRule>