force-app/main/default/objects/DMAPP__Plan_Type__c/validationRules/DMAPP__RevenueAttainmentValidRange.validationRule-meta.xml
<ValidationRule>
    <fullName>DMAPP__RevenueAttainmentValidRange</fullName>
    <active>true</active>
    <errorConditionFormula>(DMAPP__Target_Revenue_Attainment_Green__c &lt; 0 || DMAPP__Target_Revenue_Attainment_Green__c &gt; 1) ||
(DMAPP__Target_Revenue_Attainment_Amber__c  &lt; 0 ||   DMAPP__Target_Revenue_Attainment_Amber__c &gt; 1) ||
(DMAPP__Target_Revenue_Attainment_Amber__c  &gt;  DMAPP__Target_Revenue_Attainment_Green__c)</errorConditionFormula>
    <errorMessage>Revenue Attainment Green and Amber cannot be less than 0% or greater than 100% and Revenue Attainment Green cannot be less than Revenue Attainment Amber</errorMessage>
</ValidationRule>