force-app/main/default/objects/DMAPP__Plan_Type__c/validationRules/DMAPP__TargetedRelationshipCoverageValidRange.validationRule-meta.xml
<ValidationRule>
    <fullName>DMAPP__TargetedRelationshipCoverageValidRange</fullName>
    <active>true</active>
    <errorConditionFormula>(DMAPP__Strategic_Coverage_Green__c  &lt; 0 || DMAPP__Strategic_Coverage_Green__c &gt; 1) ||
(DMAPP__Strategic_Coverage_Amber__c &lt; 0 || DMAPP__Strategic_Coverage_Amber__c &gt; 1) ||
(DMAPP__Strategic_Coverage_Amber__c  &gt;  DMAPP__Strategic_Coverage_Green__c)</errorConditionFormula>
    <errorMessage>Targeted Relationship Coverage Green and Amber cannot be less than 0% or greater than 100% and Targeted Relationship Coverage Green cannot be less than Targeted Relationship Coverage Amber</errorMessage>
</ValidationRule>