force-app/main/default/objects/DMAPP__Plan_Type__c/validationRules/DMAPP__TargetedSolutionPenetrationValidRange.validationRule-meta.xml
<ValidationRule>
    <fullName>DMAPP__TargetedSolutionPenetrationValidRange</fullName>
    <active>true</active>
    <errorConditionFormula>(DMAPP__Strategic_Penetration_Green__c &lt; 0 || DMAPP__Strategic_Penetration_Green__c &gt; 1) ||
(DMAPP__Strategic_Penetration_Amber__c &lt; 0 || DMAPP__Strategic_Penetration_Amber__c &gt; 1) ||
(DMAPP__Strategic_Penetration_Amber__c  &gt;  DMAPP__Strategic_Penetration_Green__c)</errorConditionFormula>
    <errorMessage>Targeted Solution Penetration Green and Amber cannot be less than 0% or greater than 100% and Targeted Solution Penetration Green cannot be less than Targeted Solution Penetration Amber</errorMessage>
</ValidationRule>