force-app/main/default/objects/DMAPP__Plan_Type__c/validationRules/DMAPP__TargetedSolutionPipelineValidRange.validationRule-meta.xml
<ValidationRule>
    <fullName>DMAPP__TargetedSolutionPipelineValidRange</fullName>
    <active>true</active>
    <errorConditionFormula>(DMAPP__Strategic_Contribution_Green__c &lt; 0 || DMAPP__Strategic_Contribution_Green__c &gt; 1) ||
(DMAPP__Strategic_Contribution_Amber__c  &lt; 0 ||  DMAPP__Strategic_Contribution_Amber__c  &gt; 1) ||
(DMAPP__Strategic_Contribution_Amber__c  &gt;  DMAPP__Strategic_Contribution_Green__c)</errorConditionFormula>
    <errorMessage>Targeted Solution Pipeline Green and Amber cannot be less than 0% or greater than 100% and Targeted Solution Pipeline Green cannot be less than Targeted Solution Pipeline Amber</errorMessage>
</ValidationRule>