force-app/main/default/objects/DMAPP__Plan_Type__c/validationRules/DMAPP__TargetedSolutionPotentialValidRange.validationRule-meta.xml
<ValidationRule>
    <fullName>DMAPP__TargetedSolutionPotentialValidRange</fullName>
    <active>true</active>
    <errorConditionFormula>(DMAPP__Strategic_Potential_Green__c &lt; 0 || DMAPP__Strategic_Potential_Green__c &gt; 1) ||
(DMAPP__Strategic_Potential_Amber__c  &lt; 0 ||  DMAPP__Strategic_Potential_Amber__c &gt; 1) ||
(DMAPP__Strategic_Potential_Amber__c  &gt;  DMAPP__Strategic_Potential_Green__c)</errorConditionFormula>
    <errorMessage>Targeted Solution Potential Green and Amber cannot be less than 0% or greater than 100% and Targeted Solution Potential Green cannot be less than Targeted Solution Potential Amber</errorMessage>
</ValidationRule>