force-app/main/default/objects/DMAPP__Plan_Type__c/validationRules/DMAPP__ValueToCustomerValidRange.validationRule-meta.xml
<ValidationRule>
    <fullName>DMAPP__ValueToCustomerValidRange</fullName>
    <active>true</active>
    <errorConditionFormula>(DMAPP__Value_Contribution_Green__c &lt; 0 || DMAPP__Value_Contribution_Green__c &gt; 1)  || (DMAPP__Value_Contribution_Amber__c  &lt; 0 ||  DMAPP__Value_Contribution_Amber__c &gt; 1) || (DMAPP__Value_Contribution_Amber__c  &gt;  DMAPP__Value_Contribution_Green__c)</errorConditionFormula>
    <errorMessage>Value To Customer Green and Amber cannot be less than 0% or greater than 100% and Value To Customer Green cannot be less than Value To Customer Amber</errorMessage>
</ValidationRule>